# fluid_renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json
assets/shaders/: composite.frag  debug.frag  depth.frag  normal.frag  particle.vert  quad.vert  smooth.frag  thickness.frag
src/: CMakeLists.txt  main.cpp  main.h  sph.cpp  sph.h
